fix: fix bug with scroll on mobile devices

--- a/src/components/templates/AuthorizationTemplate/style.scss
+++ b/src/components/templates/AuthorizationTemplate/style.scss
@@ -46,6 +46,10 @@
   
           .form-field {
             margin-bottom: 0px;
+
+            &__captcha {
+              width: unset;
+            }
           }
   
           .login-logo {
@@ -115,6 +119,10 @@
   
           .form-field {
             margin-bottom: 0px;
+
+            &__captcha {
+              width: unset;
+            }
           }
   
           .login-logo {
